# MyMPI

./: .gitignore  .gitmodules  Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
C/: CMakeLists.txt  Cargo.toml  build.rs
C/benches/: CMakeLists.txt  allgather.cpp  allreduce.cpp  bcast.cpp  bench_template.h  gather.cpp  main.cpp  p2p.cpp  reduce.cpp
C/bindings/: CMakeLists.txt  bench_template.h  mpi.h
C/cmake/: CompileOptions.cmake
C/jobs/: collective.job  p2p.job
C/tests/: CMakeLists.txt  p2p.cpp
Cpp/benches/: CMakeLists.txt  main.cpp
Cpp/bindings/: CMakeLists.txt
Cpp/cmake/: CompileOptions.cmake
benches/: cpp_benches.rs  mem_benchmark.rs
src/: main.rs
src/mpi/: backend.rs  base.rs  bindings.rs  buffer.rs  collectives.rs  comm.rs  communicator.rs  context.rs  debug.rs  errhandle.rs  errhandler.rs  lib.rs  memory.rs  metatypes.rs  object.rs  private.rs  reducefuc.rs  reqqueue.rs  shared.rs  shm.rs  types.rs  xfer.rs
src/mpi/backend/: memory.rs  reqqueue.rs  shm.rs
src/mpi/communicator/: comm.rs  group.rs
src/mpi/errhandler/: callback.rs  checks.rs  handler.rs
src/mpi/object/: context.rs  types.rs
src/mpi/xfer/: collectives.rs  ppp.rs  reducefunc.rs  request.rs
src/mpi/xfer/collectives/: allgather.rs  allreduce.rs  barrier.rs  bcast.rs  gather.rs  keychanger.rs  reduce.rs  reducefunc.rs
src/mpi/xfer/ppp/: recv.rs  send.rs
src/mymode/: mod.rs  printbye.rs
tests/: memory.rs  xfer.rs
