[package]
name = "my_mpi"
version = "0.2.0"
edition = "2021"

[profile.dev]
opt-level = 3
debug = true

[lib]
name = "mpi"
path = "src/mpi/lib.rs"
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["quiet"]
ntcpy = []
quiet = []

[dev-dependencies]
c_bind = {path = "C"}

[[bench]]
name = "cpp_benches"
harness = false

[dependencies]
libc = "0.2"
zstr = "0.1.1"